Added professional features and login middleware

--- a/public/doctor.html
+++ b/public/doctor.html
@@ -5,6 +5,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="header">
+  <h2>Hospital Queue System</h2>
+  <div>
+    <span id="username"></span>
+    <a href="/logout">Logout</a>
+  </div>
+</div>
 
   <h1>Doctor Panel</h1>
 
